--- a/DrivingMissDaisy/App.config
+++ b/DrivingMissDaisy/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DrivingMissDaisy.Properties.Settings.Dab1ConnectionString"
+            connectionString="Data Source=ALICE-PC\ALICE;Initial Catalog=Dab1;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
